updated remote submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "godot-headers"]
 	path = godot-headers
 	url = https://github.com/godotengine/godot-headers.git
+[submodule ".\\godot-headers\\"]
+	branch = origin/3.4
