--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,2 @@
-[submodule "godot-cpp"]
-	path = godot-cpp
-	url = https://github.com/godotengine/godot-cpp
-	branch = 3.4
+[submodule ".\\godot-cpp\\"]
+	branch = 3.x
