--- a/.gitmodules
+++ b/.gitmodules
@@ -1,2 +1,6 @@
 [submodule ".\\godot-cpp\\"]
 	branch = 3.x
+[submodule "godot-cpp"]
+	path = godot-cpp
+	url = https://github.com/godotengine/godot-cpp
+	branch = 3.x
